tests/should-fail/shadowed-abilities/check1.fk
-- #desc   Shadowing of active abilities does not eliminate their history (shadowed instantiations)
-- #return cannot unify abilities [£ | State Int] (line 19 , column 8) and [£ | State ( Bool ) , State Int] (line 11 , column 8)

--- start of standard stuff ---
data Bool = true | false
interface State X = get: X
                  | put: X -> Unit
--- end of standard stuff ---


foo: {[State Bool, State Int]Unit}
foo! = put 7

processStateInt: {<State Int>Unit -> Unit}
processStateInt <get -> k> = processStateInt (k 3)
processStateInt <put x -> k> = processStateInt (k unit)
processStateInt unit = unit

main: {Unit}
main! = processStateInt foo!
